Setup of imports

--- a/ODIR5K.ipynb
+++ b/ODIR5K.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIpCQ08aYjLqnQ0OOAQsK/",
+      "authorship_tag": "ABX9TyOykQMEVubepKGW+kGj21hV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Imports"
+        "Setup\n"
       ],
       "metadata": {
         "id": "O0jE-MN8hIMe"
@@ -37,12 +37,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "BKXyxzY_dmCp"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers, models\n",
+        "\n",
+        "from google.colab import drive"
+      ]
     }
   ]
 }
