--- a/ODIR5K.ipynb
+++ b/ODIR5K.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOysNhe4MUHimaYyT/8Wcer",
+      "authorship_tag": "ABX9TyOhQ2gW/VYO6lN+hCQ0wYm9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,9 +115,9 @@
           "height": 206
         },
         "id": "m_celj2s3Tvc",
-        "outputId": "d633bb1e-2b3b-4c80-ea05-267090bf0fe7"
+        "outputId": "8a289311-a5e6-4d40-a5d5-b262c035ea50"
       },
-      "execution_count": 19,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,7 +146,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-317f0379-1519-473a-8df0-975ece8bdc2b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f48c6096-d0b2-43dc-a5dc-82cc2c1662ef\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -279,7 +279,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-317f0379-1519-473a-8df0-975ece8bdc2b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f48c6096-d0b2-43dc-a5dc-82cc2c1662ef')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -331,12 +331,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-317f0379-1519-473a-8df0-975ece8bdc2b button.colab-df-convert');\n",
+              "        document.querySelector('#df-f48c6096-d0b2-43dc-a5dc-82cc2c1662ef button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-317f0379-1519-473a-8df0-975ece8bdc2b');\n",
+              "        const element = document.querySelector('#df-f48c6096-d0b2-43dc-a5dc-82cc2c1662ef');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -356,8 +356,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-9276fec4-5924-4ad6-97bc-ff9eb79b583c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9276fec4-5924-4ad6-97bc-ff9eb79b583c')\"\n",
+              "<div id=\"df-976f2095-da58-4a96-88cc-74c87ed4f1af\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-976f2095-da58-4a96-88cc-74c87ed4f1af')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -476,7 +476,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-9276fec4-5924-4ad6-97bc-ff9eb79b583c button');\n",
+              "        document.querySelector('#df-976f2095-da58-4a96-88cc-74c87ed4f1af button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -487,7 +487,60 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dataset Information"
+      ],
+      "metadata": {
+        "id": "XCXRqPf_-tnh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_data.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wSdXpo9F-t-0",
+        "outputId": "e9f35207-8cb4-4035-9066-745d4aa1be49"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 3500 entries, 0 to 3499\n",
+            "Data columns (total 15 columns):\n",
+            " #   Column                     Non-Null Count  Dtype \n",
+            "---  ------                     --------------  ----- \n",
+            " 0   ID                         3500 non-null   int64 \n",
+            " 1   Patient Age                3500 non-null   int64 \n",
+            " 2   Patient Sex                3500 non-null   object\n",
+            " 3   Left-Fundus                3500 non-null   object\n",
+            " 4   Right-Fundus               3500 non-null   object\n",
+            " 5   Left-Diagnostic Keywords   3500 non-null   object\n",
+            " 6   Right-Diagnostic Keywords  3500 non-null   object\n",
+            " 7   N                          3500 non-null   int64 \n",
+            " 8   D                          3500 non-null   int64 \n",
+            " 9   G                          3500 non-null   int64 \n",
+            " 10  C                          3500 non-null   int64 \n",
+            " 11  A                          3500 non-null   int64 \n",
+            " 12  H                          3500 non-null   int64 \n",
+            " 13  M                          3500 non-null   int64 \n",
+            " 14  O                          3500 non-null   int64 \n",
+            "dtypes: int64(10), object(5)\n",
+            "memory usage: 410.3+ KB\n"
+          ]
         }
       ]
     }
