--- a/ocular-disease-recognition.ipynb
+++ b/ocular-disease-recognition.ipynb
@@ -9,13 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\duwak\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -30,12 +35,238 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Access Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Patient Age</th>\n",
+       "      <th>Patient Sex</th>\n",
+       "      <th>Left-Fundus</th>\n",
+       "      <th>Right-Fundus</th>\n",
+       "      <th>Left-Diagnostic Keywords</th>\n",
+       "      <th>Right-Diagnostic Keywords</th>\n",
+       "      <th>N</th>\n",
+       "      <th>D</th>\n",
+       "      <th>G</th>\n",
+       "      <th>C</th>\n",
+       "      <th>A</th>\n",
+       "      <th>H</th>\n",
+       "      <th>M</th>\n",
+       "      <th>O</th>\n",
+       "      <th>filepath</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>target</th>\n",
+       "      <th>filename</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>69</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0_left.jpg</td>\n",
+       "      <td>0_right.jpg</td>\n",
+       "      <td>cataract</td>\n",
+       "      <td>normal fundus</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>../input/ocular-disease-recognition-odir5k/ODI...</td>\n",
+       "      <td>['N']</td>\n",
+       "      <td>[1, 0, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>0_right.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>57</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1_left.jpg</td>\n",
+       "      <td>1_right.jpg</td>\n",
+       "      <td>normal fundus</td>\n",
+       "      <td>normal fundus</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>../input/ocular-disease-recognition-odir5k/ODI...</td>\n",
+       "      <td>['N']</td>\n",
+       "      <td>[1, 0, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>1_right.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>42</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2_left.jpg</td>\n",
+       "      <td>2_right.jpg</td>\n",
+       "      <td>laser spot，moderate non proliferative retinopathy</td>\n",
+       "      <td>moderate non proliferative retinopathy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>../input/ocular-disease-recognition-odir5k/ODI...</td>\n",
+       "      <td>['D']</td>\n",
+       "      <td>[0, 1, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>2_right.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>4_left.jpg</td>\n",
+       "      <td>4_right.jpg</td>\n",
+       "      <td>macular epiretinal membrane</td>\n",
+       "      <td>mild nonproliferative retinopathy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>../input/ocular-disease-recognition-odir5k/ODI...</td>\n",
+       "      <td>['D']</td>\n",
+       "      <td>[0, 1, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>4_right.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>5_left.jpg</td>\n",
+       "      <td>5_right.jpg</td>\n",
+       "      <td>moderate non proliferative retinopathy</td>\n",
+       "      <td>moderate non proliferative retinopathy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>../input/ocular-disease-recognition-odir5k/ODI...</td>\n",
+       "      <td>['D']</td>\n",
+       "      <td>[0, 1, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>5_right.jpg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID  Patient Age Patient Sex Left-Fundus Right-Fundus  \\\n",
+       "0   0           69      Female  0_left.jpg  0_right.jpg   \n",
+       "1   1           57        Male  1_left.jpg  1_right.jpg   \n",
+       "2   2           42        Male  2_left.jpg  2_right.jpg   \n",
+       "3   4           53        Male  4_left.jpg  4_right.jpg   \n",
+       "4   5           50      Female  5_left.jpg  5_right.jpg   \n",
+       "\n",
+       "                            Left-Diagnostic Keywords  \\\n",
+       "0                                           cataract   \n",
+       "1                                      normal fundus   \n",
+       "2  laser spot，moderate non proliferative retinopathy   \n",
+       "3                        macular epiretinal membrane   \n",
+       "4             moderate non proliferative retinopathy   \n",
+       "\n",
+       "                Right-Diagnostic Keywords  N  D  G  C  A  H  M  O  \\\n",
+       "0                           normal fundus  0  0  0  1  0  0  0  0   \n",
+       "1                           normal fundus  1  0  0  0  0  0  0  0   \n",
+       "2  moderate non proliferative retinopathy  0  1  0  0  0  0  0  1   \n",
+       "3       mild nonproliferative retinopathy  0  1  0  0  0  0  0  1   \n",
+       "4  moderate non proliferative retinopathy  0  1  0  0  0  0  0  0   \n",
+       "\n",
+       "                                            filepath labels  \\\n",
+       "0  ../input/ocular-disease-recognition-odir5k/ODI...  ['N']   \n",
+       "1  ../input/ocular-disease-recognition-odir5k/ODI...  ['N']   \n",
+       "2  ../input/ocular-disease-recognition-odir5k/ODI...  ['D']   \n",
+       "3  ../input/ocular-disease-recognition-odir5k/ODI...  ['D']   \n",
+       "4  ../input/ocular-disease-recognition-odir5k/ODI...  ['D']   \n",
+       "\n",
+       "                     target     filename  \n",
+       "0  [1, 0, 0, 0, 0, 0, 0, 0]  0_right.jpg  \n",
+       "1  [1, 0, 0, 0, 0, 0, 0, 0]  1_right.jpg  \n",
+       "2  [0, 1, 0, 0, 0, 0, 0, 0]  2_right.jpg  \n",
+       "3  [0, 1, 0, 0, 0, 0, 0, 0]  4_right.jpg  \n",
+       "4  [0, 1, 0, 0, 0, 0, 0, 0]  5_right.jpg  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dataset_Dir = 'C:\\\\Users\\\\duwak\\\\Desktop\\\\CS3IP - Individual Project\\\\Code\\\\Dataset\\\\full_df.csv'\n",
+    "df_data = pd.read_csv(Dataset_Dir)\n",
+    "df_data.head()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
