--- a/ocular-disease-recognition.ipynb
+++ b/ocular-disease-recognition.ipynb
@@ -397,8 +397,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset Distribution\n",
-    "- Below is shown the distribution of images available for each different ocular condition. The different diseases are encoded into individual coloums as N, D, G, C, A, H, M, O. They have binary indicators 0 or 1 to specify the absence or presence of a condition. This is also know as one-hot encoding. Thus, the dataset structure indicates multiple labels per image, allowing for multi-label classifcation. "
+    "Data Distribution\n",
+    "- Below is shown the distribution of images available for each different ocular condition. The different diseases are encoded into individual coloums as N (Normal), D (Diabetes), G (Glaucoma), C (Cataract) , A (Age related Macular Degeneration), H (Hypertension), M (Pathological Myopia), O (Other diseases/abnormalities). They have binary indicators 0 or 1 to specify the absence or presence of a condition. This is also know as one-hot encoding. Thus, the dataset structure indicates multiple labels per image, allowing for multi-label classifcation.\n",
+    "\n",
+    "- Conditions G, C, A, H, M, O have low image samples, thus need for balancing these classes is required."
    ]
   },
   {
@@ -437,6 +439,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Dealing with class imbalance\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# The dataset is imbalanced, so we will use class weights to balance it out during training                     \n",
+    "total_samples = class_counts.sum()\n",
+    "class_weights = {\n",
+    "    0: total_samples / class_counts[0],\n",
+    "    1: total_samples / class_counts[1],\n",
+    "    2: total_samples / class_counts[2],\n",
+    "    3: total_samples / class_counts[3],\n",
+    "    4: total_samples / class_counts[4],\n",
+    "    5: total_samples / class_counts[5],\n",
+    "    6: total_samples / class_counts[6],\n",
+    "    7: total_samples / class_counts[7]\n",
+    "}       \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Improving the efficiency of the dataset\n",
     "- One-hot encoding for machine learning purposes may not be most efficient for multi-label classification hence to improve the efficiency of this dataset the individual one-hot encoded columns will be converted into a single list also known as multi-hot encoding. "
    ]
@@ -447,6 +477,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
