Update class imbalance handling in ocular-disease-recognition.ipynb

--- a/ocular-disease-recognition.ipynb
+++ b/ocular-disease-recognition.ipynb
@@ -439,7 +439,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dealing with class imbalance\n"
+    "Dealing with class imbalance - Calculating class weights \n",
+    "- This one approach to resolving the class imbalance, the class weights calculated will make the CNN model more sensitive to underrepresented classes and improve its overall performance on imbalanced datasets. Higher class weight will mean that a single sample from a higher weight class would be considered as 7 samples from a class with lower weights. \n"
    ]
   },
   {
@@ -448,7 +449,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# The dataset is imbalanced, so we will use class weights to balance it out during training                     \n",
     "total_samples = class_counts.sum()\n",
     "class_weights = {\n",
@@ -460,7 +460,7 @@
     "    5: total_samples / class_counts[5],\n",
     "    6: total_samples / class_counts[6],\n",
     "    7: total_samples / class_counts[7]\n",
-    "}       \n"
+    "}       "
    ]
   },
   {
