intial training of model evaluation

--- a/odir5kresnet50.ipynb
+++ b/odir5kresnet50.ipynb
@@ -634,8 +634,7 @@
     "plt.ylabel('Accuracy')\n",
     "plt.xlabel('Epochs')\n",
     "plt.legend(['train', 'validation'])\n",
-    "plt.show()\n",
-    "     "
+    "plt.show()"
    ]
   },
   {
