1st train of resnet 50 on odir5k
switched to google colab notebook

--- a/odir5kresnet50.ipynb
+++ b/odir5kresnet50.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "4  [0, 1, 0, 0, 0, 0, 0, 0]  5_right.jpg  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
     "    image = tf.image.decode_jpeg(image, channels=3)\n",
     "    image = tf.image.resize(image, [224, 224])\n",
     "    image = tf.cast(image, tf.float32)\n",
-    "\n",
+    "    image = tf.keras.applications.resnet50.preprocess_input(image)  # Preprocessing the image to be compatible with ResNet50\n",
     "    return image"
    ]
   },
