loss and accuracy graph analysis

--- a/odir5kresnet50.ipynb
+++ b/odir5kresnet50.ipynb
@@ -551,6 +551,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model Accuracy Graph Analysis\n",
+    "\n",
+    "- Both the training and validation accuracies are quite stable, but they are not very high – hovering around 50%. This suggests the model is performing only slightly better than random chance, assuming a balanced classification task.\n",
+    "- There is not much difference between the training and validation accuracy, which indicates that the model is not overfitting. However, the low accuracy on both suggests underfitting, meaning the model is too simple or not properly trained to capture the complexity of the data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 99,
    "metadata": {},
@@ -580,6 +590,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model Loss Graph Analysis \n",
+    "- The training loss is decreasing over time, which is good as it means the model is learning and improving its performance on the training set.\n",
+    "- The validation loss decreases initially but then fluctuates. It doesn't show a clear increasing trend, which is positive because it suggests the model is not significantly overfitting to the training data. However, the fluctuations might indicate that the model could benefit from further tuning or that the validation data may not be representative or consistent."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
@@ -604,23 +623,6 @@
     "plt.xlabel('Epochs')\n",
     "plt.legend(['train', 'validation'])\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of test dataset:  32\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"size of test dataset: \", len(test_dataset))    "
    ]
   },
   {
