1st run and implementation of resnet model - data leakage issue
Also realised the issue with testing images in dataset missing labels - there is also data leakage here due to error made by myself

--- a/Resnet50.ipynb
+++ b/Resnet50.ipynb
@@ -1245,11 +1245,13 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
+      "display_name": "Python 3.9 (tf)",
+      "language": "python",
+      "name": "tensorflow"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.18"
     }
   },
   "nbformat": 4,
