fixed imports in resnet50

--- a/Resnet50_ODIR5K.ipynb
+++ b/Resnet50_ODIR5K.ipynb
@@ -27,27 +27,33 @@
       },
       "outputs": [],
       "source": [
-        "import matplotlib.pyplot as plt\n",
+        "# Standard library imports\n",
+        "import os\n",
+        "import ast\n",
+        "\n",
+        "# Third-party general imports\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import tensorflow as tf\n",
-        "from PIL import Image\n",
-        "\n",
-        "from tensorflow import keras\n",
-        "from tensorflow.keras import layers\n",
-        "from tensorflow.keras.layers import Dense, Dropout\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.optimizers import Adam\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.metrics import confusion_matrix\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.utils import resample\n",
         "\n",
-        "import os\n",
-        "import seaborn as sns\n",
-        "from sklearn.metrics import confusion_matrix\n",
+        "# TensorFlow and Keras imports\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "from tensorflow.keras.layers import Dense, Dropout\n",
+        "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.regularizers import l2\n",
         "\n",
-        "import ast\n",
+        "# Additional Keras imports\n",
         "from keras.utils import to_categorical\n",
         "\n",
+        "# Imports from Google Colab\n",
         "from google.colab import files\n"
       ]
     },
@@ -759,8 +765,6 @@
       },
       "outputs": [],
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
         "# Splitting the main dataframe into training, test and validation sets\n",
         "train_df, test_df = train_test_split(df_data, test_size=0.2, random_state=123)\n",
         "train_df, val_df = train_test_split(train_df, test_size=0.2, random_state=123)"
@@ -773,7 +777,7 @@
       },
       "source": [
         "# Data Distribution\n",
-        "- Class imbalance, we have minority classes M, H, G, C, A."
+        "- Class Distribution of Train, Test and Validation Data - all three sets portray the class imbalance represented by Myopia, Hypertension, AMD, Cataract and Glaucoma. "
       ]
     },
     {
@@ -885,7 +889,6 @@
       ],
       "source": [
         "# @title Distribution of Test Data\n",
-        "\n",
         "class_labels = ['Normal', 'Diabetes', 'Glaucoma', 'Cataract', 'AMD', 'Hypertension', 'Myopia', 'Other diseases']\n",
         "\n",
         "# Decode one-hot encoded labels to class names\n",
@@ -916,7 +919,9 @@
         "id": "17IUIG33ty6W"
       },
       "source": [
-        "##Apply random sampling\n"
+        "## Apply random sampling\n",
+        "- A combination of oversampling and undersampling applied to the data.\n",
+        "- The idea is to balance the data by oversampling the minority class and then undersampling the majority class.\n"
       ]
     },
     {
@@ -939,7 +944,6 @@
         }
       ],
       "source": [
-        "from sklearn.utils import resample\n",
         "\n",
         "class_distribution = train_df['target'].value_counts()\n",
         "\n",
@@ -953,10 +957,8 @@
         "    label: max(min_threshold, min(len(df_class), max_threshold)) for label, df_class in train_df.groupby('target')\n",
         "}\n",
         "\n",
-        "\n",
         "print(\"Number of samples per class to resample to:\", n_samples_per_class)\n",
         "\n",
-        "# Initialize an empty DataFrame to hold the resampled data\n",
         "df_resampled = pd.DataFrame(columns=train_df.columns)\n",
         "\n",
         "# Upsample or downsample each class according to the specified logic\n",
@@ -973,8 +975,7 @@
         "    else:\n",
         "        print(f\"No samples for class {class_label}. Check your data.\")\n",
         "\n",
-        "# Shuffle the resampled DataFrame if necessary\n",
-        "df_resampled = df_resampled.sample(frac=1, random_state=123).reset_index(drop=True)\n"
+        "df_resampled = df_resampled.sample(frac=1, random_state=123).reset_index(drop=True)"
       ]
     },
     {
@@ -1017,11 +1018,7 @@
       ],
       "source": [
         "class_distribution = train_df['target'].value_counts()\n",
-        "\n",
-        "# To see the distribution as percentages of the total\n",
-        "class_distribution_percentage = train_df['target'].value_counts(normalize=True) * 100\n",
-        "\n",
-        "print(\"Class Distribution (Count):\\n\", class_distribution)\n"
+        "print(\"Class Distribution (Count):\\n\", class_distribution)"
       ]
     },
     {
@@ -1064,10 +1061,6 @@
       ],
       "source": [
         "class_distribution = df_resampled['target'].value_counts()\n",
-        "\n",
-        "# To see the distribution as percentages of the total\n",
-        "class_distribution_percentage = df_resampled['target'].value_counts(normalize=True) * 100\n",
-        "\n",
         "print(\"Class Distribution (Count):\\n\", class_distribution)"
       ]
     },
@@ -1095,7 +1088,8 @@
         }
       ],
       "source": [
-        "# Define the class names\n",
+        "# @title Distribution of Sampled Training Data\n",
+        "\n",
         "class_labels = ['Normal', 'Diabetes', 'Glaucoma', 'Cataract', 'AMD', 'Hypertension', 'Myopia', 'Other diseases']\n",
         "\n",
         "# Decode one-hot encoded labels to class names\n",
@@ -1137,8 +1131,7 @@
         "    image = tf.image.resize(image, [224, 224])\n",
         "    image = tf.cast(image, tf.float32)\n",
         "    image = tf.keras.applications.resnet50.preprocess_input(image)  # Preprocessing the image to be compatible with pretrained model\n",
-        "    # Assuming label_string is the string representation of the list (e.g., \"[1, 0, 0]\")\n",
-        "    label = tf.strings.substr(label_string, 1, tf.strings.length(label_string) - 2)  # Remove brackets\n",
+        "    label = tf.strings.substr(label_string, 1, tf.strings.length(label_string) - 2)\n",
         "    label = tf.strings.to_number(tf.strings.split(label, ','), out_type=tf.float32)\n",
         "    return image, label"
       ]
@@ -1172,7 +1165,6 @@
         "\n",
         "    # Random hue adjustment for color\n",
         "    #image = tf.image.random_hue(image, max_delta=0.02)\n",
-        "\n",
         "    return image, label\n"
       ]
     },
@@ -1210,7 +1202,7 @@
         "\n",
         "    # Filter out filenames that do not exist\n",
         "    valid_filenames = file_exists(filenames)\n",
-        "    valid_labels = labels[np.isin(filenames, valid_filenames)]  # Keep labels corresponding to the valid filenames\n",
+        "    valid_labels = labels[np.isin(filenames, valid_filenames)]  \n",
         "\n",
         "    # Creating TensorFlow dataset\n",
         "    dataset = tf.data.Dataset.from_tensor_slices((valid_filenames, valid_labels))\n",
@@ -1329,7 +1321,6 @@
         "    class_names = ['Normal', 'Diabetes', 'Glaucoma', 'Cataract', 'AMD', 'Hypertension', 'Myopia', 'Other']\n",
         "    class_index = np.argmax(labels[i].numpy())\n",
         "    plt.title(class_names[class_index])\n",
-        "\n",
         "    plt.axis(\"off\")\n"
       ]
     },
@@ -1398,7 +1389,6 @@
       },
       "outputs": [],
       "source": [
-        "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint\n",
         "\n",
         "# Setup callbacks\n",
         "checkpoint = ModelCheckpoint(filepath='best_model', verbose=1, save_best_only=True)\n",
@@ -1430,7 +1420,6 @@
         }
       ],
       "source": [
-        "from tensorflow.keras.regularizers import l2\n",
         "pretrained_model = tf.keras.applications.ResNet50(\n",
         "    include_top=False,\n",
         "    input_shape=(224, 224, 3),\n",
@@ -1827,8 +1816,8 @@
         "id": "ZEeM9PWLeSsZ"
       },
       "source": [
-        "##Using KerasTuner\n",
-        "- To find the best hyperparameter values for your models.\n",
+        "## Using KerasTuner\n",
+        "- To find the best hyperparameter values for model\n",
         "```\n",
         "@misc{omalley2019kerastuner,\n",
         "    title        = {KerasTuner},\n",
@@ -1873,7 +1862,7 @@
         }
       ],
       "source": [
-        "pip install keras-tuner --upgrade"
+        "!pip install keras-tuner --upgrade"
       ]
     },
     {
@@ -1885,8 +1874,6 @@
       "outputs": [],
       "source": [
         "import keras_tuner as kt\n",
-        "from tensorflow.keras.layers import Dropout\n",
-        "\n",
         "\n",
         "def model_builder(hp):\n",
         "    pretrained_model = tf.keras.applications.ResNet50(\n",
@@ -2082,7 +2069,7 @@
         "id": "bb2qbjYzFPCY"
       },
       "source": [
-        "#Finetuning"
+        "# Finetuning"
       ]
     },
     {
@@ -2298,32 +2285,31 @@
         }
       ],
       "source": [
-        "# Initialize a dictionary to store training history\n",
+        "# dictionary to store training history\n",
         "full_history = {}\n",
         "\n",
-        "# Function to unfreeze layers gradually\n",
+        "# Function to unfreeze layers gradually 1-4\n",
         "def unfreeze_model(model, pretrained_model, n_layers):\n",
         "    # Unfreeze the top `n_layers` of the pretrained model\n",
         "    for layer in pretrained_model.layers[-n_layers:]:\n",
         "        layer.trainable = True\n",
         "\n",
-        "    # Recompile the model every time you make a change to the layer's `trainable` status\n",
+        "    # Recompile the model every time change is made to layer's `trainable` status\n",
         "    model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=1e-5),\n",
         "                  loss='categorical_crossentropy',\n",
         "                  metrics=['accuracy'])\n",
         "\n",
         "# Gradually unfreeze the layers and save history\n",
-        "for i in range(1, 5):  # Assuming you want to unfreeze the top 4 layers one by one\n",
+        "for i in range(1, 5):  #  unfreeze the top 4 layers one by one\n",
         "    print(f\"Unfreezing top {i} layers and retraining.\")\n",
         "    unfreeze_model(model, pretrained_model, i)\n",
         "\n",
-        "    # Fit the model and save the history\n",
         "    history = model.fit(train_ds, validation_data=val_ds, epochs=10, callbacks=callbacks)\n",
         "\n",
         "    # Save the history in the full_history dictionary\n",
         "    full_history[f'phase_{i}'] = history.history\n",
         "\n",
-        "    # Optionally, save the model at each phase\n",
+        "    # Save the model at each phase\n",
         "    model.save(f'model_after_unfreezing_{i}_layers.h5')\n"
       ]
     },
@@ -2362,8 +2348,6 @@
         }
       ],
       "source": [
-        "\n",
-        "\n",
         "# Function to plot accuracy and loss\n",
         "def plot_history(full_history):\n",
         "    # Initialize lists for the plot\n",
@@ -2399,7 +2383,6 @@
         "\n",
         "    plt.show()\n",
         "\n",
-        "# Call the function to plot the history\n",
         "plot_history(full_history)\n"
       ]
     },
@@ -2485,10 +2468,10 @@
         "\n",
         "class_labels = ['Normal', 'Diabetes', 'Glaucoma', 'Cataract', 'AMD', 'Hypertension', 'Myopia', 'Other']\n",
         "\n",
-        "# Define the number of images you want to display\n",
+        "\n",
         "num_images_to_display = 9\n",
         "\n",
-        "# Initialize lists to store the images and labels\n",
+        "# lists to store the images and labels\n",
         "display_images = []\n",
         "display_labels = []\n",
         "\n",
@@ -2497,7 +2480,7 @@
         "    display_images.append(images)\n",
         "    display_labels.append(labels)\n",
         "\n",
-        "# Now plot the images with predictions and true labels\n",
+        "# plot the images with predictions and true labels\n",
         "plt.figure(figsize=(10, 10))\n",
         "for i, image in enumerate(display_images):\n",
         "    ax = plt.subplot(3, 3, i + 1)\n",
@@ -2613,7 +2596,7 @@
         "# Collect the true labels from the unbatched dataset\n",
         "true_labels = np.vstack([y.numpy() for _, y in test_ds.unbatch()])\n",
         "\n",
-        "# true_labels should now be a 2-dimensional array, you can verify by printing its shape\n",
+        "# true_labels should now be a 2-dimensional array\n",
         "print(\"Shape of true_labels after vstack:\", true_labels.shape)\n",
         "\n",
         "# Convert one-hot encoded labels to class indices\n",
@@ -2656,8 +2639,6 @@
       "source": [
         "class_labels = ['Normal', 'Diabetes', 'Glaucoma', 'Cataract', 'AMD', 'Hypertension', 'Myopia', 'Other diseases']\n",
         "\n",
-        "# Now, the number of predicted classes should match the number of true classes\n",
-        "# Generate the classification report again\n",
         "report = classification_report(true_classes, predicted_classes, target_names=class_labels, zero_division=0)\n",
         "\n",
         "print(report)"
@@ -2725,7 +2706,6 @@
         }
       ],
       "source": [
-        "from keras.utils import to_categorical\n",
         "true_classes_one_hot = to_categorical(true_classes, num_classes=8)\n",
         "\n",
         "# Calculate ROC AUC for multi-class classification\n",
@@ -2767,9 +2747,6 @@
         }
       ],
       "source": [
-        "import seaborn as sns\n",
-        "from sklearn.metrics import confusion_matrix\n",
-        "\n",
         "# Calculate confusion matrix\n",
         "cm = confusion_matrix(true_classes, predicted_classes)\n",
         "\n",
@@ -2826,16 +2803,6 @@
         "plt.ylabel('True Label')\n",
         "plt.xlabel('Predicted Label')\n",
         "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zroC4QRPNVyH"
-      },
-      "source": [
-        "# Explainable AI\n",
-        "- SHAP, GradCAM, LIME"
       ]
     }
   ],
