--- a/Resnet50_ODIR5K.ipynb
+++ b/Resnet50_ODIR5K.ipynb
@@ -1139,42 +1139,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GXf4d28iusvS"
-      },
-      "source": [
-        "Preparing Augmented and Oversampled Training Dataset"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "T9gCqwl8h056"
-      },
-      "outputs": [],
-      "source": [
-        "def augment(image, label):\n",
-        "    image = tf.image.random_flip_left_right(image)\n",
-        "    image = tf.image.random_flip_up_down(image)\n",
-        "    #image = tf.image.random_brightness(image, max_delta=0.1)\n",
-        "    #image = tf.image.random_contrast(image, lower=0.9, upper=1.1)\n",
-        "    # Random zoom\n",
-        "    #if tf.random.uniform([]) > 0.5:\n",
-        "        #image = tf.image.central_crop(image, central_fraction=tf.random.uniform([], 0.8, 1.0))\n",
-        "        #image = tf.image.resize(image, [224, 224])\n",
-        "\n",
-        "    # Random hue adjustment for color\n",
-        "    #image = tf.image.random_hue(image, max_delta=0.02)\n",
-        "    return image, label\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "NByx3c4tu1tI"
       },
       "source": [
-        "Preparing Test and Validation Datasets"
+        "Preparing Train, Test and Validation Datasets"
       ]
     },
     {
@@ -1189,7 +1157,7 @@
         "    # Filter out non-existing files\n",
         "    return [file_path for file_path in file_paths if os.path.exists(file_path)]\n",
         "\n",
-        "def load_and_prepare_dataset(df, images_dir, shuffle=True, batch_size=32, augment_data=False):\n",
+        "def load_and_prepare_dataset(df, images_dir, shuffle=True, batch_size=32):\n",
         "    images_left = images_dir + df['Left-Fundus']\n",
         "    images_right = images_dir + df['Right-Fundus']\n",
         "\n",
@@ -1202,13 +1170,11 @@
         "\n",
         "    # Filter out filenames that do not exist\n",
         "    valid_filenames = file_exists(filenames)\n",
-        "    valid_labels = labels[np.isin(filenames, valid_filenames)]  \n",
+        "    valid_labels = labels[np.isin(filenames, valid_filenames)]  # Keep labels corresponding to the valid filenames\n",
         "\n",
         "    # Creating TensorFlow dataset\n",
         "    dataset = tf.data.Dataset.from_tensor_slices((valid_filenames, valid_labels))\n",
         "    dataset = dataset.map(parse_image_and_label)  # Apply the preprocessing function\n",
-        "    if augment_data:\n",
-        "        dataset = dataset.map(augment)\n",
         "    if shuffle:\n",
         "        dataset = dataset.shuffle(buffer_size=len(valid_filenames))\n",
         "    dataset = dataset.batch(batch_size)\n",
@@ -1223,7 +1189,6 @@
       },
       "outputs": [],
       "source": [
-        "#train_ds = load_and_prepare_dataset(train_df, 'ODIR-5K/ODIR-5K/Training Images/', shuffle=True, batch_size=32, augment_data=True)\n",
         "train_ds = load_and_prepare_dataset(df_resampled, 'ODIR-5K/ODIR-5K/Training Images/', shuffle=True, batch_size=32)\n",
         "test_ds = load_and_prepare_dataset(test_df, 'ODIR-5K/ODIR-5K/Training Images/', shuffle=False, batch_size=32)\n",
         "val_ds = load_and_prepare_dataset(val_df, 'ODIR-5K/ODIR-5K/Training Images/', shuffle=False, batch_size=32)\n"
