--- a/Oversampling Models/Xception_ODIR5K.ipynb
+++ b/Oversampling Models/Xception_ODIR5K.ipynb
@@ -2176,8 +2176,7 @@
         "id": "hNT8o25bgLZr"
       },
       "source": [
-        "# Prediction Evaluation\n",
-        "- Classes normal, diabetes and others are the top 3 predicted classes, this suggests that the remaining classes are underrepresented hence the model is not using them to classify the test data."
+        "# Prediction Evaluation"
       ]
     },
     {
